--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "concurrently": "^5.0.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2"
