--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "webpack.config.js",
   "proxy": "http://localhost:3001",
+  "homepage": "https://rokasandreikenas.github.io/coffee-menu-react",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production",
     "server": "json-server --watch src/api/db.json --port 3001",
